platform/apps/nixcn-cms-test/network/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nixcn-cms-test-gateway
  namespace: nixcn-cms-test
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - test.nix.org.cn

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: nixcn-cms-test-tls
      hosts:
        - test.nix.org.cn
